<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".DetailedActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="224dp"
        android:layout_height="58dp"
        android:text="@string/My_playlist_details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnDisplayList"
        android:layout_width="259dp"
        android:layout_height="52dp"
        android:text="@string/display_the_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/btnCalculateAverage"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:text="@string/calculate_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplayList"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="323dp"
        android:layout_height="107dp"
        android:text="@string/view_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateAverage"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:text="@string/return_to_main_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails" />
</androidx.constraintlayout.widget.ConstraintLayout>